--- a/PRACTICA2/docker-compose.yml
+++ b/PRACTICA2/docker-compose.yml
@@ -1,21 +1,56 @@
-version: '3'
+version: '3.5'
+
+networks:
+  nginx-php-mysql-node:
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-13}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
-      POSTGRES_USER: ${POSTGRES_USER:-symfony}
+  nginx-service:
+    image: nginx:stable-alpine
+    container_name: nginx-container
+    ports:
+      - "30300:80"
     volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - .:/var/www/project
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php-service
+      - mysql-service
+    networks:
+      - nginx-php-mysql-node
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  db-data:
-###< doctrine/doctrine-bundle ###
+  php-service:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: php-container
+    ports:
+      - "9000:9000"
+    volumes:
+      - .:/var/www/project
+    networks:
+      - nginx-php-mysql-node
+
+  mysql-service:
+    image: mysql:8
+    container_name: mysql-container
+    ports:
+      - "4306:3306"
+    volumes:
+      - ./mysql:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_PASSWORD=secret
+      - MYSQL_DATABASE=db
+    networks:
+      - nginx-php-mysql-node
+
+  node-service:
+    image: node:latest
+    container_name: node-container
+    volumes:
+      - .:/var/www/project
+    working_dir: /var/www/project
+    networks:
+      - nginx-php-mysql-node
